# mysql-cli-py

./: README.md  Taskfile.yaml  pyproject.toml  requirements.txt  setup.py
mysql_cli/: __init__.py  client.py  query.py  utils.py
tests/: test_client.py  test_mysql.toml  test_parse_mysql.toml  test_query.py
